<resources>
    <string name="app_name" translatable="false">ExpressaT</string>
    <string name="textoBotonLogin">Inicia sessió</string>
    <string name="textoLabelUsuario">Usuari:</string>
    <string name="textoLabelClave">Clau:</string>
    <string name="textoLabelNoTienesCuenta">No tens compte?</string>
    <string name="textoCrearCuenta">Crea\'n un!</string>
    <string name="textoLabelYaTienesCuenta">Ja tens compte?</string>
    <string name="textoIniciarSesion">Inicia sessió!</string>
    <string name="textoBienvenido">Benvingut!</string>
    <string name="textoBotonRegistrarse">Registrar-se</string>
    <string name="title_activity_menu_principal">MenuPrincipal</string>
    <string name="navigation_drawer_open">Obrir finestra de navegació</string>
    <string name="navigation_drawer_close">Tancar finestra de navegació</string>
    <string name="nav_header_desc">Capçalera de navegació</string>
    <string name="action_settings">Configuracions</string>

    <string name="registroCorrecto">Usuari registrat correctament.</string>
    <string name="loginCorrecto">Has iniciat sessió correctament.</string>

    <string name="menu_recent">Temes recents</string>
    <string name="menu_profile">El meu perfil</string>
    <string name="menu_newtheme">Crea un nou tema</string>
    <string name="menu_search">Busca</string>
    <string name="menu_signout">Tanca la sessió</string>
    <string name="menu_send">Enviar</string>

    <string name="cv_tema_title">Títol</string>
    <string name="news_placeholder">Notícies</string>
    <string name="cv_tema_info">Descripció del tema</string>

    <string name="hintCorreo">Correu</string>
    <string name="hintPassword">Clau</string>

    <string name="hombre">Home</string>
    <string name="acepto_las_condiciones_y_t_rminos_de_servicio">Accepto les Condicions i Termes.</string>
    <string name="escriu_el_teu_nom_d_usuari">Escriu el teu correu</string>
    <string name="escriu_la_teva_clau">Escriu la teva clau</string>
    <string name="selecciona_el_teu_g_nere">Selecciona el teu gènere</string>
    <string name="accepta_les_condicions_i_termes">Accepta les Condicions i Termes</string>
    <string name="bot_per_a_registrar_se">Botó per a registrar-se</string>
    <string name="bot_per_a_iniciar_sessi">Botó per a iniciar sessió</string>
    <string name="clica_per_a_crear_un_compte">Clica per a crear un compte</string>

    <string name="registroErroneo">Aquest usuari ja existeix.</string>
    <string name="login_error">Credencials incorrectes</string>
    <string name="hintNick" translatable="false">Nick</string>
    <string name="explicacio_expressat">ExpressaT és una app amb la que pots compartir les teves experiències i emocions amb altra gent de manera online, amb total llibertat i sense preocupacions.
        \n\nComparteix les teves experiències i les d\'altres usuaris i fes nous amics!</string>
    <string name="no_hay_conexion">No hi ha connexió.</string>
    <string name="sign_out">Tanca la sessió</string>
    <string name="AdvertenciaNickVacio">Error: Nick buit.</string>
    <string name="tema_title">Escriu aqui el titol del tema</string>
    <string name="description_tema">Expressa\'t aqui</string>
    <string name="ask_anonimat">Manten-me anònim</string>
    <string name="tema_crear">CREA EL TEMA</string>
    <string name="white_camps">Has d\'omplir tots els camps de text.</string>
    <string name="hintNombre">Nom</string>
    <string name="hintFechaNacimiento">Data naixement</string>
    <string name="botonMisTemas">Els meus temes</string>
    <string name="hintTemasCreados">Temes creats</string>
    <string name="hintRespuestas">Respostes</string>
    <string name="btnGuardasCambiosPerfil">Guardar</string>
    <string name="cambiosMiPerfil">Canvis guardats correctament</string>
    <string name="noCambiosMiPerfil">No s\'han detectat canvis</string>
    <string name="temaUsuarioAnonimo">Anònim</string>
    <string name="search_filter">Busca...</string>
    <string name="cv_tema_user">Usuari</string>
    <string name="resposta_tema">Escriu aqui la teva resposta</string>
    <string name="enviar_resposta">Enviar resposta</string>
    <string name="cv_historia_user">Usuari</string>
    <string name="characters_respuesta">Caràcters</string>
    <string name="respuesta_erronea">La longitud de la resposta excedeix el limit de 250 caràcters.</string>
    <string name="unknown_error">Error desconegut.</string>

    <string-array name="categories">
        <item>Familia</item>
        <item>Treball</item>
        <item>Amor</item>
        <item>Diners</item>
        <item>Música</item>
        <item>Esports</item>
        <item>Art</item>
        <item>Estudis</item>
    </string-array>

    <string-array name="search_filters">
        <item>Categories</item>
        <item>Anònim</item>
        <item>Número de respostes</item>
        <item>Descripció</item>
        <item>ID del tema</item>
        <item>Nick</item>
        <item>Títol</item>
    </string-array>

    <string-array name="dies">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>

    <string-array name="mesos">
        <item>Gener</item>
        <item>Febrer</item>
        <item>Març</item>
        <item>Abril</item>
        <item>Maig</item>
        <item>Juny</item>
        <item>Juliol</item>
        <item>Agost</item>
        <item>Septembre</item>
        <item>Octubre</item>
        <item>Novembre</item>
        <item>Desembre</item>
    </string-array>

    <string-array name="anys">
        <item>1920</item>
        <item>1921</item>
        <item>1922</item>
        <item>1923</item>
        <item>1924</item>
        <item>1925</item>
        <item>1926</item>
        <item>1927</item>
        <item>1928</item>
        <item>1929</item>
        <item>1930</item>
        <item>1931</item>
        <item>1932</item>
        <item>1933</item>
        <item>1934</item>
        <item>1935</item>
        <item>1936</item>
        <item>1937</item>
        <item>1938</item>
        <item>1939</item>
        <item>1940</item>
        <item>1941</item>
        <item>1943</item>
        <item>1944</item>
        <item>1945</item>
        <item>1946</item>
        <item>1947</item>
        <item>1948</item>
        <item>1949</item>
        <item>1950</item>
        <item>1951</item>
        <item>1952</item>
        <item>1953</item>
        <item>1954</item>
        <item>1955</item>
        <item>1956</item>
        <item>1957</item>
        <item>1958</item>
        <item>1959</item>
        <item>1960</item>
        <item>1961</item>
        <item>1962</item>
        <item>1963</item>
        <item>1964</item>
        <item>1965</item>
        <item>1966</item>
        <item>1967</item>
        <item>1968</item>
        <item>1969</item>
        <item>1970</item>
        <item>1971</item>
        <item>1972</item>
        <item>1973</item>
        <item>1974</item>
        <item>1975</item>
        <item>1976</item>
        <item>1977</item>
        <item>1978</item>
        <item>1979</item>
        <item>1980</item>
        <item>1981</item>
        <item>1982</item>
        <item>1983</item>
        <item>1984</item>
        <item>1985</item>
        <item>1986</item>
        <item>1987</item>
        <item>1988</item>
        <item>1989</item>
        <item>1990</item>
        <item>1991</item>
        <item>1992</item>
        <item>1993</item>
        <item>1994</item>
        <item>1995</item>
        <item>1996</item>
        <item>1997</item>
        <item>1998</item>
        <item>1999</item>
        <item>2001</item>
        <item>2002</item>
        <item>2003</item>
        <item>2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
    </string-array>
    <!--
    <integer-array name="category_images">
        <item>@drawable/art_category</item>
        <item>@drawable/family_category</item>
        <item>@drawable/love_category</item>
        <item>@drawable/money_category</item>
        <item>@drawable/music_category</item>
        <item>@drawable/sports_category</item>
        <item>@drawable/study_category</item>
        <item>@drawable/work_category</item>
    </integer-array>
    -->

    <string name="btn_filter">Filtra</string>
    <string name="checkbox_filter_annonymous">És anònim</string>
    <string name="respuesta_vacia">No pots enviar una resposta buida.</string>
    <string name="register_null_fields">Has d\'omplir tots els camps</string>
    <string name="register_mark_checkbox">Has d\'acceptar les Condicions i Termes.</string>
    <string name="bienvenida1_welcome_text">Benvingut/da a</string>
    <string name="hintApellidos">Cognoms</string>
    <string name="bienvenida3_envia_button">Envia</string>
    <string name="recuperar_contrasenya">Recuper contrasenya</string>
    <string name="recuperar_password_success">Correu de recuperació de contrasenya enviat correctament.</string>
    <string name="error_recuperar_contrasenya">No s\'ha trobat el correu introduït.</string>
    <string name="recuperar_password_vacio">Introdueix un correu.</string>
    <string name="connection_wait">La connexió ha fallat. Reconectant en...</string>
    <string name="string_cargando">Carregant...</string>
    <string name="menu_chat">Xat</string>
    <string name="buscar_chat">Buscar</string>
    <string name="searchChatNotFound">No s\'ha trobat cap coincidencia.</string>
    <string name="mensajeIniciacion1">Vaja! sembla que és l\'inici d\'una nova conversa! . Sentiu-vos lliures de expressar-vos les vostres emocions i recordeu ... ExpressaT!  🎉🎉</string>
    <string name="escribe_mensaje_chat">Escriu un missatge</string>
    <string name="text_edit_profile" translatable="false">Editar perfil</string>
    <string name="text_mis_temas">Els meus temes</string>
    <string name="profile_nick_hint" translatable="false">Nick</string>
    <string name="profile_born_date_hint">"Data de naixement: "</string>
    <string name="profile_description_hint">Descripció</string>
    <string name="no_description">No hi ha descripció.</string>
    <string name="born_in">Va néixer el:</string>
    <string name="caracteres_password">La contrasenya ha de tenir entre 6 i 24 caràcters.</string>
    <string name="hintDescripcion">Descripció</string>
    <string name="temas_not_found">No s\'ha trobat cap tema.</string>
</resources>
