<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_newtheme"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_newtheme" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_search" />
        <item
            android:id="@+id/nav_signout"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/menu_signout" />
    </group>

    <!--
    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>
    -->
</menu>
