<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/cardViewsRespuestas"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:orientation="vertical"
    app:cardElevation="5dp"
    app:cardCornerRadius="5dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fondoRespuesta"
        style="@style/cardViewsRespuestas"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tituloAutor"
            style="@style/textoCardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/cv_tema_title"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/usuarioRespuesta"
            style="@style/textoCardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/allerta"
            android:hint="@string/cv_historia_user"
            android:padding="8dp"
            android:textColor="@color/textColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tituloAutor" />

        <TextView
            android:id="@+id/cuerpoRespuesta"
            style="@style/textoCardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/cv_tema_info"
            android:padding="8dp"
            android:textColor="#A09E9E"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/usuarioRespuesta" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>